--- a/css/master.css
+++ b/css/master.css
@@ -10,7 +10,7 @@ a:hover
 body{
   background-color: beige;
   color: black;
-  font-family: Times New Roman,Arial,sans-serif;
+  font-family: "Segoe UI","sans-serif";
   text-align: center;
 }
 footer{
